--- a/index.html
+++ b/index.html
@@ -168,82 +168,115 @@
     <div class="container">
         <h2 class="text-center mb-5" data-i18n="projects_title">My Projects</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-        <!-- Project 1: kotlin-core -->
-        <div class="col">
-            <div class="card h-100">
-                <h5 class="card-header">kotlin-core</h5>
-                <p class="card-text">A Kotlin-based core library for reusable components.</p>
+        <!-- kotlin-core -->
+        <div class="col d-flex">
+            <div class="card">
+                    <h5 class="card-header">kotlin-core</h5>
+                <div class="card-body">
+                    <p class="card-text">A Kotlin-based core library for reusable components.</p>
+                </div>
                 <div class="card-footer bg-transparent">
                     <a href="https://github.com/MatteV02/kotlin-core" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="/projects/kotlin-core.html" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Project 2: EHRforEquips -->
-        <div class="col">
-            <div class="card h-100">
+        <!-- EHRforEquips -->
+        <div class="col d-flex">
+            <div class="card">
                 <h5 class="card-header">EHRforEquips</h5>
-                <p class="card-text">Electronic Health Records system for medical equipment management.</p>
+                <div class="card-body">
+                    <p class="card-text">Electronic Health Records system for medical equipment management.</p>
+                </div>
                 <div class="card-footer bg-transparent">
                     <a href="https://github.com/MatteV02/EHRforEquips" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="/projects/ehrforequips.html" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Project 3: Pong -->
-        <div class="col">
-            <div class="card h-100">
+        <!-- Real-Time Coin Acceptor -->
+        <div class="col d-flex">
+            <div class="card">
+                <h5 class="card-header">Real-Time Coin Acceptor</h5>
+                <div class="card-body">
+                    <p class="card-text">A real-time coin acceptor powered by Raspberry Pi Pico, FreeRTOS, and Micro-ROS.</p>
+                </div>
+                <div class="card-footer bg-transparent">
+                <a href="https://github.com/FilippoCavalieri/real-time-coin-acceptor" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                <a href="projects/real_time_coin_acceptor.html" class="btn btn-secondary">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Pong -->
+        <div class="col d-flex">
+            <div class="card">
                 <h5 class="card-header">Pong with pthreads and ncurses</h5>
-                <p class="card-text">A classic Pong game implemented using pthreads and ncurses.</p>
+                <div class="card-body">
+                    <p class="card-text">A classic Pong game implemented using pthreads and ncurses.</p>
+                </div>
                 <div class="card-footer bg-transparent">
                     <a href="https://github.com/MatteV02/Pong" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="/projects/pong.html" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Project 4: QuizMaker -->
-        <div class="col">
-            <div class="card h-100">
+        <!-- QuizMaker -->
+        <div class="col d-flex">
+            <div class="card">
                 <h5 class="card-header">QuizMaker</h5>
-                <p class="card-text">A tool for creating and managing quizzes.</p>
+                <div class="card-body">
+                    <p class="card-text">A tool for creating and managing quizzes.</p>
+                </div>
                 <div class="card-footer bg-transparent">
                     <a href="https://github.com/MatteV02/quiz_maker" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="/projects/quizmaker.html" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Project 5: AAI Assignment -->
-        <div class="col">
-            <div class="card h-100">
+        <!-- AAI Assignment -->
+        <div class="col d-flex">
+            <div class="card">
                 <h5 class="card-header">AAI Assignment</h5>
-                <p class="card-text">Reinforcement Learning application for a simulated production system.</p>
+                <div class="card-body">
+                    <p class="card-text">Reinforcement Learning application for a simulated production system.</p>
+                </div>
                 <div class="card-footer bg-transparent">
                     <a href="https://github.com/MatteV02/aai_assignment" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="/projects/aai_assignment.html" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Project 6: KoTetris -->
-        <div class="col">
-            <div class="card h-100">
+        <!-- KoTetris -->
+        <div class="col d-flex">
+            <div class="card">
                 <h5 class="card-header">KoTetris</h5>
-                <p class="card-text">A Kotlin Multiplatform version of the famous Tetris game.</p>
+                <div class="card-body">
+                    <p class="card-text">A Kotlin Multiplatform version of the famous Tetris game.</p>
+                </div>
                 <div class="card-footer bg-transparent">
                     <a href="https://github.com/MatteV02/KoTetris" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="/projects/kotetris.html" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
 
-        <!-- Project 7: Personal Website -->
-        <div class="col">
-            <div class="card h-100">
+        <!-- Personal Website -->
+        <div class="col d-flex">
+            <div class="card">
                 <h5 class="card-header">Personal Website</h5>
-                <p class="card-text">The source code for this website.</p>
+                <div class="card-body">
+                    <p class="card-text">The source code for this website.</p>
+                </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/personal-website" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                    <a href="https://github.com/MatteV02/personal-website" class="btn btn-secondary">View on GitHub</a>
                 </div>
             </div>
-        </div>
         </div>
     </div>
     </section>
