--- a/projects/real_time_coin_acceptor.html
+++ b/projects/real_time_coin_acceptor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1 - Matteo Veroni</title>
+    <title>Real-Time Coin Acceptor - Matteo Veroni</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -15,8 +15,8 @@
     <!-- Project Hero -->
     <section class="py-5 bg-light">
         <div class="container py-5 text-center">
-            <h1 class="display-4 text-dark" data-i18n="project_title">Project 1</h1>
-            <p class="lead text-dark">A detailed description of Project 1.</p>
+            <h1 class="display-4 text-dark" data-i18n="project_title">Real-Time Coin Acceptor</h1>
+            <p class="lead text-dark">A real-time coin acceptor powered by Raspberry Pi Pico, FreeRTOS, and Micro-ROS.</p>
         </div>
     </section>
 
@@ -29,38 +29,41 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">
-                        Here you can describe the project in detail. Include images, code snippets, or any other relevant information.
+                        This project implements a real-time coin acceptor using a Raspberry Pi Pico, FreeRTOS, and Micro-ROS.
+                        It includes C++ code for the Pico, Python calibration utilities, and a Python frontend.
+                        The system is designed for real-time coin detection and value publishing via Micro-ROS topics.
                     </p>
                     <div class="row">
                         <div class="col-md-6">
                             <h4>Features</h4>
                             <ul>
-                                <li>Feature 1</li>
-                                <li>Feature 2</li>
-                                <li>Feature 3</li>
+                                <li>Real-time coin detection</li>
+                                <li>Micro-ROS integration</li>
+                                <li>Python calibration utilities</li>
+                                <li>FreeRTOS-based firmware</li>
+                                <li>Raspberry Pi Pico support</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <h4>Technologies Used</h4>
                             <ul>
-                                <li>Technology 1</li>
-                                <li>Technology 2</li>
-                                <li>Technology 3</li>
+                                <li>C++</li>
+                                <li>FreeRTOS</li>
+                                <li>Micro-ROS</li>
+                                <li>Python</li>
+                                <li>Raspberry Pi Pico</li>
+                                <li>ROS 2 (Jazzy)</li>
                             </ul>
                         </div>
                     </div>
                 </div>
+                <div class="card-footer bg-transparent">
+                    <a href="https://github.com/FilippoCavalieri/real-time-coin-acceptor" target="_blank" class="btn btn-primary">View on GitHub</a>
+                </div>
             </div>
-            <a href="../index.html" class="btn btn-secondary">Back to Home</a>
         </div>
     </section>
 
     <!--#include virtual="/footer.html" -->
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Multilingual -->
-    <script src="/assets/js/translations.js"></script>
 </body>
 </html>
