--- a/navbar.html
+++ b/navbar.html
@@ -31,6 +31,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/#contact" data-i18n="nav_contact">Contact</a>
         </li>
+        <!--#include virtual="/language_selector.html" -->
       </ul>
     </div>
   </div>
