Add translations for navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="py-5 bg-accent">
+    <section class="py-5 bg-accent" id="about">
         <div class="about-me">
             <div class="about-me-text">
                 <h2 class="mb-4" data-i18n="about_title">About Me</h2>
