--- a/navbar.html
+++ b/navbar.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="/index.html" data-i18n="nav_home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/#about" data-i18n="nav_about">About</a>
+          <a class="nav-link" href="/#about" data-i18n="nav_about">About me</a>
         </li>
         <!-- Projects Dropdown -->
         <li class="nav-item dropdown">
