add index.html translations

--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
                 <p class="mb-0 text-white" data-i18n="copyright">© 2025 Matteo Veroni. All rights reserved.</p>
             </div>
             <div class="col-md-6 text-md-end">
-                <a href="/contacts.html" class="text-white" data-i18n="contact_me">Contact Me</a>
+                <a href="/contacts.html" class="text-white" data-i18n="nav_contact">Contact Me</a>
                 <!--#include virtual="/language_selector.html" -->
             </div>
         </div>
