--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
             <div class="card">
                     <h5 class="card-header">kotlin-core</h5>
                 <div class="card-body">
-                    <p class="card-text">A Kotlin-based core library for reusable components.</p>
+                    <p class="card-text" data-i18n="kotlin-brief">A Kotlin-based core environment for learning.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/kotlin-core" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                    <a href="/projects/kotlin-core.html" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/MatteV02/kotlin-core" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                    <a href="/projects/kotlin-core.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -187,11 +187,11 @@
             <div class="card">
                 <h5 class="card-header">EHRforEquips</h5>
                 <div class="card-body">
-                    <p class="card-text">Electronic Health Records system for medical equipment management.</p>
+                    <p class="card-text" data-i18n="ehrforequips-brief">Electronic Health Records system for freelance doctors.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/EHRforEquips" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                    <a href="/projects/ehrforequips.html" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/MatteV02/EHRforEquips" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                    <a href="/projects/ehrforequips.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -201,11 +201,11 @@
             <div class="card">
                 <h5 class="card-header">Real-Time Coin Acceptor</h5>
                 <div class="card-body">
-                    <p class="card-text">A real-time coin acceptor powered by Raspberry Pi Pico, FreeRTOS, and Micro-ROS.</p>
+                    <p class="card-text" data-i18n="real-time-coin-acceptor-brief">A real-time coin acceptor powered by Raspberry Pi Pico, FreeRTOS and Micro-ROS.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                <a href="https://github.com/FilippoCavalieri/real-time-coin-acceptor" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                <a href="projects/real_time_coin_acceptor.html" class="btn btn-secondary">Learn More</a>
+                <a href="https://github.com/FilippoCavalieri/real-time-coin-acceptor" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                <a href="projects/real-time-coin-acceptor.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -213,13 +213,13 @@
         <!-- Pong -->
         <div class="col d-flex">
             <div class="card">
-                <h5 class="card-header">Pong with pthreads and ncurses</h5>
+                <h5 class="card-header">Pong</h5>
                 <div class="card-body">
-                    <p class="card-text">A classic Pong game implemented using pthreads and ncurses.</p>
+                    <p class="card-text" data-i18n="pong-brief">A classic Pong game implemented using pthreads and ncurses.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/Pong" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                    <a href="/projects/pong.html" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/MatteV02/Pong" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                    <a href="/projects/pong.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -229,11 +229,11 @@
             <div class="card">
                 <h5 class="card-header">QuizMaker</h5>
                 <div class="card-body">
-                    <p class="card-text">A tool for creating and managing quizzes.</p>
+                    <p class="card-text" data-i18n="quizmaker-brief">A tool for creating and managing quizzes.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/quiz_maker" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                    <a href="/projects/quizmaker.html" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/MatteV02/quiz_maker" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                    <a href="/projects/quizmaker.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -243,11 +243,11 @@
             <div class="card">
                 <h5 class="card-header">AAI Assignment</h5>
                 <div class="card-body">
-                    <p class="card-text">Reinforcement Learning application for a simulated production system.</p>
+                    <p class="card-text" data-i18n="aai_assignment-brief">Reinforcement Learning agent for a simulated production system.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/aai_assignment" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                    <a href="/projects/aai_assignment.html" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/MatteV02/aai_assignment" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                    <a href="/projects/aai_assignment.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -257,11 +257,11 @@
             <div class="card">
                 <h5 class="card-header">KoTetris</h5>
                 <div class="card-body">
-                    <p class="card-text">A Kotlin Multiplatform version of the famous Tetris game.</p>
+                    <p class="card-text" data-i18n="kotetris-brief">A Kotlin Multiplatform version of the famous Tetris game.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/KoTetris" target="_blank" class="btn btn-secondary">View on GitHub</a>
-                    <a href="/projects/kotetris.html" class="btn btn-secondary">Learn More</a>
+                    <a href="https://github.com/MatteV02/KoTetris" target="_blank" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
+                    <a href="/projects/kotetris.html" class="btn btn-secondary" data-i18n="learn_more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -271,10 +271,10 @@
             <div class="card">
                 <h5 class="card-header">Personal Website</h5>
                 <div class="card-body">
-                    <p class="card-text">The source code for this website.</p>
+                    <p class="card-text" data-i18n="personal-website-brief">The source code for this website.</p>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/personal-website" class="btn btn-secondary">View on GitHub</a>
+                    <a href="https://github.com/MatteV02/personal-website" class="btn btn-secondary" data-i18n="github">View on GitHub</a>
                 </div>
             </div>
         </div>
