Add translation of projects pages

--- a/projects/aai-assignment.html
+++ b/projects/aai-assignment.html
@@ -15,8 +15,8 @@
     <!-- Project Hero -->
     <section class="py-5 bg-light">
         <div class="container py-5 text-center">
-            <h1 class="display-4 text-dark" data-i18n="project_title">AAI Assignment</h1>
-            <p class="lead text-dark">Reinforcement Learning for optimizing a simulated production environment.</p>
+            <h1 class="display-4 text-dark">AAI Assignment</h1>
+            <p class="lead text-dark" data-i18n="aai_assignment-brief">Reinforcement Learning for optimizing a simulated production environment.</p>
         </div>
     </section>
 
@@ -25,25 +25,25 @@
         <div class="container">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h2 class="card-title text-white">Project Overview</h2>
+                    <h2 class="card-title text-white" data-i18n="project-overview">Project Overview</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">
+                    <p class="card-text" data-i18n="aai_assignment-long">
                         This assignment applies Reinforcement Learning (RL) to optimize a simulated production system.
                         It uses Stable-Baselines3's PPO algorithm to train an agent in a SimPy-based production environment.
                     </p>
                     <div class="row">
                         <div class="col-md-6">
-                            <h4>Features</h4>
+                            <h4 data-i18n="features">Features</h4>
                             <ul>
-                                <li>RL-based optimization</li>
-                                <li>Simulated production environment</li>
-                                <li>Performance metrics</li>
-                                <li>Stable-Baselines3 PPO agent</li>
+                                <li data-i18n="aai_assignment-bullet1">RL-based optimization</li>
+                                <li data-i18n="aai_assignment-bullet2">Simulated production environment</li>
+                                <li data-i18n="aai_assignment-bullet3">Performance metrics</li>
+                                <li data-i18n="aai_assignment-bullet4">Stable-Baselines3 PPO agent</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
-                            <h4>Technologies Used</h4>
+                            <h4 data-i18n="technologies-used">Technologies Used</h4>
                             <ul>
                                 <li>Python</li>
                                 <li>Stable-Baselines3</li>
@@ -54,12 +54,15 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/aai_assignment" target="_blank" class="btn btn-primary">View on GitHub</a>
+                    <a href="https://github.com/MatteV02/aai_assignment" target="_blank" class="btn btn-primary" data-i18n="github">View on GitHub</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!--#include virtual="/footer.html" -->
+
+    <!-- Multilingual -->
+    <script src="/assets/js/translations.js"></script>
 </body>
 </html>
