--- a/projects/pong.html
+++ b/projects/pong.html
@@ -15,8 +15,8 @@
     <!-- Project Hero -->
     <section class="py-5 bg-light">
         <div class="container py-5 text-center">
-            <h1 class="display-4 text-dark" data-i18n="project_title">Pong with pthreads and ncurses</h1>
-            <p class="lead text-dark">A classic Pong game implemented using pthreads and ncurses.</p>
+            <h1 class="display-4 text-dark">Pong</h1>
+            <p class="lead text-dark" data-i18n="pong-brief">A classic Pong game implemented using pthreads and ncurses.</p>
         </div>
     </section>
 
@@ -25,23 +25,23 @@
         <div class="container">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h2 class="card-title text-white">Project Overview</h2>
+                    <h2 class="card-title text-white" data-i18n="project-overview">Project Overview</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">
+                    <p class="card-text" data-i18n="pong-long">
                         A terminal-based Pong game using multi-threading and ncurses for rendering.
                     </p>
                     <div class="row">
                         <div class="col-md-6">
-                            <h4>Features</h4>
+                            <h4 data-i18n="features">Features</h4>
                             <ul>
-                                <li>Multiplayer support</li>
-                                <li>Real-time rendering</li>
-                                <li>Score tracking</li>
+                                <li data-i18n="pong-bullet1">Multiplayer support</li>
+                                <li data-i18n="pong-bullet2">Real-time rendering</li>
+                                <li data-i18n="pong-bullet3">Score tracking</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
-                            <h4>Technologies Used</h4>
+                            <h4 data-i18n="technologies-used">Technologies Used</h4>
                             <ul>
                                 <li>C</li>
                                 <li>pthreads</li>
@@ -51,12 +51,15 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/Pong" target="_blank" class="btn btn-primary">View on GitHub</a>
+                    <a href="https://github.com/MatteV02/Pong" target="_blank" class="btn btn-primary" data-i18n="github">View on GitHub</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!--#include virtual="/footer.html" -->
+    
+    <!-- Multilingual -->
+    <script src="/assets/js/translations.js"></script>
 </body>
 </html>
