--- a/projects/kotlin-core.html
+++ b/projects/kotlin-core.html
@@ -15,8 +15,8 @@
     <!-- Project Hero -->
     <section class="py-5 bg-light">
         <div class="container py-5 text-center">
-            <h1 class="display-4 text-dark" data-i18n="project_title">kotlin-core</h1>
-            <p class="lead text-dark">A repository of exercises in Kotlin, adapted from nbicocchi/java-core.</p>
+            <h1 class="display-4 text-dark">kotlin-core</h1>
+            <p class="lead text-dark" data-i18n="kotlin-brief">A repository of exercises in Kotlin, adapted from nbicocchi/java-core.</p>
         </div>
     </section>
 
@@ -25,29 +25,29 @@
         <div class="container">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h2 class="card-title text-white">Project Overview</h2>
+                    <h2 class="card-title text-white" data-i18n="project-overview">Project Overview</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">
+                    <p class="card-text" data-i18n="kotlin-long">
                         This repository is an adaptation of the exercises provided in <a href="https://github.com/nbicocchi/java-core/tree/main" target="_blank">nbicocchi/java-core</a> for the Kotlin programming language.
                         It contains exercises covering basics, object-oriented design, data structures, generics, functional programming, exceptions, I/O, and multi-threading.
                     </p>
                     <div class="row">
                         <div class="col-md-6">
-                            <h4>Features</h4>
+                            <h4 data-i18n="features">Features</h4>
                             <ul>
-                                <li>Exercises for Kotlin basics</li>
-                                <li>Object-oriented design exercises</li>
-                                <li>Data structures and collections</li>
-                                <li>Generic data structures</li>
-                                <li>Functional programming exercises</li>
-                                <li>Exception handling</li>
-                                <li>I/O framework exercises</li>
-                                <li>Multi-threading exercises</li>
+                                <li data-i18n="kotlin-bullet1">Exercises for Kotlin basics</li>
+                                <li data-i18n="kotlin-bullet2">Object-oriented design exercises</li>
+                                <li data-i18n="kotlin-bullet3">Data structures and collections</li>
+                                <li data-i18n="kotlin-bullet4">Generic data structures</li>
+                                <li data-i18n="kotlin-bullet5">Functional programming exercises</li>
+                                <li data-i18n="kotlin-bullet6">Exception handling</li>
+                                <li data-i18n="kotlin-bullet7">I/O framework exercises</li>
+                                <li data-i18n="kotlin-bullet8">Multi-threading exercises</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
-                            <h4>Technologies Used</h4>
+                            <h4 data-i18n="technologies-used">Technologies Used</h4>
                             <ul>
                                 <li>Kotlin</li>
                                 <li>Gradle</li>
@@ -56,12 +56,15 @@
                     </div>
                 </div>
                 <div class="card-footer bg-transparent">
-                    <a href="https://github.com/MatteV02/kotlin-core" target="_blank" class="btn btn-primary">View on GitHub</a>
+                    <a href="https://github.com/MatteV02/kotlin-core" target="_blank" class="btn btn-primary" data-i18n="github">View on GitHub</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!--#include virtual="/footer.html" -->
+
+    <!-- Multilingual -->
+    <script src="/assets/js/translations.js"></script>
 </body>
 </html>
