--- a/projects/pong.html
+++ b/projects/pong.html
@@ -58,6 +58,9 @@
     </section>
 
     <!--#include virtual="/footer.html" -->
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Multilingual -->
     <script src="/assets/js/translations.js"></script>
