--- a/projects/real-time-coin-acceptor.html
+++ b/projects/real-time-coin-acceptor.html
@@ -66,6 +66,9 @@
 
     <!--#include virtual="/footer.html" -->
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Multilingual -->
     <script src="/assets/js/translations.js"></script>
 </body>
