--- a/navbar.html
+++ b/navbar.html
@@ -29,7 +29,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/#contact" data-i18n="nav_contact">Contact</a>
+          <a class="nav-link" href="/contacts.html" data-i18n="nav_contact">Contact</a>
         </li>
         <!--#include virtual="/language_selector.html" -->
       </ul>
