Enhanced contacts.html visualization

--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <!-- Contact Form Column -->
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                     <div class="card h-100">
                         <div class="card-header bg-accent">
                             <h2 class="card-title text-white">Get In Touch</h2>
@@ -55,7 +55,7 @@
                     <div class="card h-100 w-100">
                         <div class="card-body text-center d-flex flex-column justify-content-center">
                             <h3 class="card-title">Or Email Me Directly</h3>
-                            <a href="mailto:veronimatteo1@gmail.com" class="btn btn-outline-primary mt-3" target="_blank" rel="noopener noreferrer">
+                            <a href="mailto:veronimatteo1@gmail.com" class="btn btn-primary mt-3" target="_blank" rel="noopener noreferrer">
                                 veronimatteo1@gmail.com
                             </a>
                         </div>
@@ -64,13 +64,6 @@
             </div>
         </div>
     </section>
-
-
-    <!-- Additional contact option -->
-    <p>Or, you can email me directly:</p>
-    <a href="mailto:veronimatteo1@gmail.com" target="_blank" rel="noopener noreferrer">
-        veronimatteo1@gmail.com
-    </a>
 
     <!--#include virtual="/footer.html" -->
 
