--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- favicon -->
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <!--#include virtual="/navbar.html" -->
@@ -16,35 +22,60 @@
     <section class="py-5 bg-light">
         <div class="container py-5 text-center">
             <h1 class="display-4 text-dark" data-i18n="contact_title">Contact Me</h1>
-            <p class="lead text-dark">Feel free to reach out for collaborations, questions, or just to say hello!</p>
+            <p class="lead text-dark" data-i18n="contact_subtitle">Feel free to reach out for collaborations, questions, or just to say hello!</p>
         </div>
     </section>
 
-    <!-- Contact Form and Direct Email -->
+    <!-- Contact Section -->
     <section class="py-5">
         <div class="container">
             <div class="row justify-content-center">
                 <!-- Contact Form Column -->
                 <div class="col-md-6 mb-4 mb-md-0">
                     <div class="card h-100">
-                        <div class="card-header bg-accent">
-                            <h2 class="card-title text-white">Get In Touch</h2>
+                        <div class="card-header bg-accent text-center">
+                            <h2 class="card-title text-white" data-i18n="contact_form_title">Get In Touch</h2>
                         </div>
+
                         <div class="card-body">
                             <form id="contactForm">
+                                <!-- Name Field -->
                                 <div class="mb-3">
-                                    <label for="name" class="form-label" data-i18n="form_name">Name</label>
-                                    <input type="text" class="form-control" name="name" placeholder="Your Name">
+                                    <label class="form-label" data-i18n="form_name">Name</label>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        name="name"
+                                        placeholder="Your Name"
+                                    >
                                 </div>
+
+                                <!-- Email Field -->
                                 <div class="mb-3">
-                                    <label for="email" class="form-label" data-i18n="form_email">Email</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Your Email">
+                                    <label class="form-label" data-i18n="form_email">Email</label>
+                                    <input
+                                        type="email"
+                                        class="form-control"
+                                        name="email"
+                                        placeholder="Your Email"
+                                    >
                                 </div>
+
+                                <!-- Message Field -->
                                 <div class="mb-3">
-                                    <label for="message" class="form-label" data-i18n="form_message">Message</label>
-                                    <textarea class="form-control" name="message" rows="5" placeholder="Your Message"></textarea>
+                                    <label class="form-label" data-i18n="form_message">Message</label>
+                                    <textarea
+                                        class="form-control"
+                                        name="message"
+                                        rows="5"
+                                        placeholder="Your Message"
+                                    ></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Send Message</button>
+
+                                <!-- Submit Button -->
+                                <button type="submit" class="btn btn-primary" data-i18n="form_submit">
+                                    Send Message
+                                </button>
                             </form>
                         </div>
                     </div>
@@ -54,8 +85,14 @@
                 <div class="col-md-6 d-flex align-items-center">
                     <div class="card h-100 w-100">
                         <div class="card-body text-center d-flex flex-column justify-content-center">
-                            <h3 class="card-title">Or Email Me Directly</h3>
-                            <a href="mailto:veronimatteo1@gmail.com" class="btn btn-primary mt-3" target="_blank" rel="noopener noreferrer">
+                            <h3 class="card-title" data-i18n="direct_email_title">Or Email Me Directly</h3>
+
+                            <a
+                                href="mailto:veronimatteo1@gmail.com"
+                                class="btn btn-primary mt-3"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                            >
                                 veronimatteo1@gmail.com
                             </a>
                         </div>
@@ -86,13 +123,21 @@
                 message: document.querySelector('textarea[name="message"]').value
             }).then(
                 function(response) {
-                    alert("Email sent successfully!");
+                    alert(document.querySelector('[data-i18n="email_success"]').textContent);
                 },
                 function(error) {
-                    alert("Failed to send email. Please try again.");
+                    alert(document.querySelector('[data-i18n="email_error"]').textContent);
                 }
             );
         });
     </script>
+
+    <!-- Hidden elements for translation (will be used in JS) -->
+    <div style="display: none;">
+        <span data-i18n="email_success">Email sent successfully!</span>
+        <span data-i18n="email_error">Failed to send email. Please try again.</span>
+    </div>
 </body>
 </html>
+
+
