--- a/contacts.html
+++ b/contacts.html
@@ -72,6 +72,13 @@
                                     ></textarea>
                                 </div>
 
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="privacyCheck" required>
+                                    <label class="form-check-label" for="privacyCheck">
+                                        I agree to the <a href="/privacy-policy.html" data-bs-toggle="modal">Privacy Policy</a>
+                                    </label>
+                                </div>
+
                                 <!-- Submit Button -->
                                 <button type="submit" class="btn btn-primary" data-i18n="form_submit">
                                     Send Message
